Fixed collumn not collapsing if screen width less than breakpoint

--- a/src/components/Column/style.styl
+++ b/src/components/Column/style.styl
@@ -13,9 +13,6 @@
     // always setting `width: 100%`. This works because we use `flex` values
     // later on to override this initial width.
     width: 100%
-    flex-basis: 0
-    flex-grow: 1
-    max-width: 100%
 
     for --breakpoint-name, --gutter-width in --gutter
         +-breakpoint-up(--breakpoint-name)
@@ -35,6 +32,11 @@
                 order: 1
 
         for --column-count in 1..--columns
+            &.{--breakpoint}
+                flex-basis: 0
+                flex-grow: 1
+                max-width: 100%
+
             +-breakpoint-up(--breakpoint-name)
                 // Flex columns
                 //
